<?xml version="1.0" encoding="utf-8"?>
<resources>

   	<!--  App specific texts (title, desc, etc.) -->
    <string name="app_name">Team Shuffle - game side picker</string>
    <string name="title_activity_main">TeamShuffle</string>
    <string name="title_activity_display_message">Team Shuffle - game side picker</string>
    
    <!--  Main layout texts -->
    <string name="enter_player">&#8230;player name&#8230;</string>
    <string name="button_add">Add!</string>
    <string name="main_instructions">Please insert players:</string>
    
    <string name="button_make_teams"> Make teams \>\></string>
    <string name="word_team">Team </string>
    <string name="warning_settings">THEMES won\'t change until app is restarted</string>

    <!--  Options Menus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_clean">Clean list</string>
    <string name="menu_back">Back</string>
    <string name="menu_close">Close</string>
    
    <!--  Item Menu -->
    <string name="menu_flt_delete">Delete</string>
    <string name="menu_flt_handic">Set Handicap</string>

    <!-- Settings' key names -->
    <string name="settings_theme">theme_id</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preferences' file strings -->
    <string name="pref_ask">Ask no. of teams.</string>
    <string name="pref_ask_summ">Whether if ask for the number of teams each time or not.</string>
    
    <string name="pref_noOfTeams">Number of teams to build.</string>
    <string name="pref_noOfTeams_summ">The amount of teams in which to divide the players.</string>

    <string name="pref_theme">Layout theme.</string>
    <string name="pref_theme_summ">Combination of colours and shapes to use for the screens.</string>
    <string-array name="pref_theme_entries">
    	<item>Light colours</item>
    	<item>Dark colours</item>
    	<item>Minimalist style</item>
    	<item>Sportive related theme</item>
    </string-array>
    <string-array name="pref_theme_values">
    	<item>"@style/theme_light"</item>
    	<item>"@style/theme_dark"</item>
    	<item>"@style/theme_subtle"</item>
    	<item>"@style/theme_sportive"</item>
    </string-array>
    
    
    <!-- Dialog -->
    <string name="dialog_dontAsk">Go and don\'t ask again</string>
    <string name="dialog_teams_checkbox">Set as default. Stop asking every time</string>
    
    <string name="dialog_query_noOfTeams">How many teams should be given?</string>
    
    <string name="dialog_go">Go!</string>
    <string name="dialog_back">Back</string>
    
</resources>