<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_ask"
        android:title="@string/pref_ask"
        android:summary="@string/pref_ask_summ"
        android:disableDependentsState="true"
        
        android:defaultValue="true" />
    
<!--  El número de equipos a crear. Sólo se puede modificar si no se pregunta cada vez. -->
    <EditTextPreference 
        android:key="pref_noOfTeams"
        android:title="@string/pref_noOfTeams"
		android:dependency="pref_ask"
        android:defaultValue="@string/pref_noOfTeams_default" />

    <ListPreference
        android:key="pref_theme"
        android:title="@string/pref_theme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_values"
        android:defaultValue="@style/theme_sportive" />

</PreferenceScreen>
